# Encrypt-A-File

./: LICENSE  README.md  __init__.py  setup.cfg
src/FileLock/: filelock.py
src/enc/: encryption.py  main.py
src/encryptafile/: Encryption.py  filelock.py
