[metadata]
name = filelock
version = 1.1.0
description = CLI tool to encrypt/decrypt using keys
long_description = file: README.md
author = Casey Compton
author_email = Ccompton42@gmail.com

[options]
package_dir =
    = src
packages = find:
install_requires =
    cryptography

[options.packages.find]
where = src
exclude = 
    tests*
    testing*

[options.entry_points]
console_scripts =
    filelock = FileLock.filelock:main
