[metadata]
name = Encrypt-A-File
version = 2.0.0
description = CLI tool to encrypt/decrypt using keys
long_description = file: README.md
author = Casey C
author_email = kcx1codes@gmail.com

[options]
package_dir =
    = src
packages = find:
install_requires =
    cryptography

[options.packages.find]
where = src
exclude = 
    tests*
    testing*

[options.entry_points]
console_scripts =
    enc = enc.main:main
